[package]
name = "beltedyr"
version = "0.1.0"
authors = ["oyvinw <p0l4re@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
serde = "1.0.126"
serde_json = "1.0.64"
ldtk_rust = "0.5.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3